[tool.poetry]
name = "hanazonochateau.net"
version = "0.1.0"
description = ""
authors = ["Totsugekitai <37617413+Totsugekitai@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "build.py" }]

[tool.poetry.dependencies]
python = "^3.7"
GitPython = "^3.1.42"
dataclasses-json = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
